Fix memory leak in RealtimeVideoIncomingSource https://bugs.webkit.org/show_bug.cgi?id=170356

Patch by Youenn Fablet <youenn@apple.com> on 2017-03-31
Reviewed by Eric Carlson.

No change of behavior.

* platform/mediastream/mac/RealtimeIncomingVideoSource.cpp:
(WebCore::RealtimeIncomingVideoSource::OnFrame): Adopting the newly created pointer.

Canonical link: https://commits.webkit.org/187281@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@214699 268f45cc-cd09-0410-ab3c-d52691b4dbfc